revised Java example to be version 21 compliant
Signed-off-by: Konstantin Läufer <laufer@cs.luc.edu>